# hermes-harness-evals

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_evals/: DESIGN.md  __init__.py  checks.py  control_surface.py  live.py  runner.py  transcript.py
agent_evals/specs/: browser_guard_canned_halt_20260712.yaml  control_surface_live_config.yaml  domain_failure_20260708.yaml  long_run_regime_20260626.yaml  loop_guard_holds.yaml  poll_thrash_20260628.yaml  toolset_collapse_20260701.yaml
agent_evals/specs/live/: browser_guard_flights.yaml  coding_smoke.yaml  loop_guard_levels_fyi.yaml  research_readonly_approvals_mode.yaml  research_readonly_config_audit.yaml  research_readonly_control.yaml  research_readonly_incident.yaml  research_readonly_omlx_profiles.yaml  research_readonly_self_flag.yaml  rtk_compression_holds.yaml  spa_page_fetch.yaml
docs/: case-study-toolset-collapse.md  thinking-sweep.md
local_bench/: cli.py  client.py  extractor.py  report.py  runner.py  sandbox.py
tasks/python/easy/: fix_binary_search.yaml  gen_tests_stack.yaml  impl_fizzbuzz.yaml  impl_flatten_dict.yaml  impl_retry.yaml  impl_two_sum.yaml
tests/: conftest.py  test_browser_guard_checks.py  test_checks.py  test_config_drift_check.py  test_control_surface_and_live.py  test_domain_failure_check.py  test_nightly_audit.py  test_sandbox_parsers.py  test_session_turns_check.py  test_specs.py  test_state_mutation_check.py  test_task_schema.py  test_transcript.py
tools/: config_drift_check.py  nightly_audit.py
ts_runner/: package-lock.json  package.json
(+30 files in other folders)
