[project]
name = "hermes-harness-evals"
version = "0.1.0"
description = "Two-tier eval suite (model codegen + harness regression) for Hermes Agent on local models"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
