[project]
name = "hermes-harness-evals"
version = "0.1.0"
description = "Two-tier eval suite (model codegen + harness regression) for Hermes Agent on local models"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["local_bench*", "agent_evals*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
